<resources>
    <string name="app_name">Eat Together</string>
    <string name="title_home">Home</string>
    <string name="search">Search</string>
    <string name="title_create">Create</string>
    <string name="title_profile">Profile</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="user_already_exists">User already exits</string>
    <string name="password_must_match">passwords must match</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="logo">logo</string>
    <string name="log_out">Log Out</string>
    <string name="settings">settings</string>
    <string name="empty_fields">empty fields</string>
    <string name="profile_image">profile image</string>
    <string name="fullname">username</string>
    <string name="edit_profile">Edit profile</string>
    <string name="event_name">Event Name</string>
    <string name="created_by">Created by:</string>
    <string name="food_label">Food</string>
    <string name="event_date">01/01/2025</string>
    <string name="event_user_creator">User Creator\n</string>
    <string name="title_event">Event</string>
    <string name="Events">Events</string>
    <string name="food_name">Food name</string>
    <string name="food_state">food state</string>
    <string name="food_weight">2kg</string>
    <string name="food_box_name">Food Box Name</string>
</resources>