<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_dark"
    android:orientation="vertical"
    tools:context=".activity.MainActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Sezione Profilo Utente -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Immagine profilo -->
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/circle_shape"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/ic_profile_img"
                app:tint="@color/bg_dark" />

            <!-- Testo -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profileUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullname"
                    android:textColor="@color/txt_darkmode"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:textColor="@color/txt_placeholder"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="12dp"
            android:layout_marginTop="50dp"
            android:background="@color/bg_dark_2" />

        <!-- Menu -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/log_out"
                android:src="@drawable/ic_logout"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="@color/txt_darkmode"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
