<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <ImageView
            android:id="@+id/eventImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/purple"
            android:contentDescription="event image"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/event_name"
                android:textColor="@color/txt_darkmode"
                android:textSize="25sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/label_event_user_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created_by"
                android:textColor="@color/txt_darkmode"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/eventOrganizer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/event_user_creator"
                android:textColor="@color/txt_darkmode"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/label_event_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date:"
                android:textColor="@color/txt_darkmode"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/eventDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="2025-12-23"
                android:textColor="@color/txt_darkmode"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/label_event_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time:"
                android:textColor="@color/txt_darkmode"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/eventTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="23:59"
                android:textColor="@color/txt_darkmode"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/label_event_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address:"
                android:textColor="@color/txt_darkmode"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/eventAddress"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Via Milano 123, Milano"
                android:textColor="@color/txt_darkmode"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/label_event_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:textColor="@color/txt_darkmode"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/eventDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ritrovo per il compleanno dei 20 anni di Marta."
                android:textColor="@color/txt_darkmode"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_regular"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:background="@color/bg_dark_2" />
        <!-- Layout Food -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--- Label Food -->
            <TextView
                android:id="@+id/eventFoodLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Food Boxes"
                android:textColor="@color/txt_darkmode"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_regular"
                android:textStyle="bold"/>

            <ListView
                android:id="@+id/foodBoxList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/bg_dark_2"
                android:dividerHeight="0.5dp"/>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>
